--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.light {
+  background-color: #fff;
+  color: #000;
+}
+
+.dark{
+  background-color: #000;
+  color: #fff;
+}
